--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-requests
-oauthlib
-pyOpenSSL
-Flask-Login
+requests==2.21.0
+Flask==1.0.2
+oauthlib==3.0.1
+pyOpenSSL==19.0.0
+Flask-Login==0.4.1
 decorator
-Flask
 Flask-SQLAlchemy
 Flask-WTF
-Flask-OAuthlib
 gunicorn
 itsdangerous
 Jinja2
