--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-requests==2.21.0
-Flask==1.0.2
-oauthlib==3.0.1
-pyOpenSSL==19.0.0
-Flask-Login==0.4.1
+requests
+Flask
+oauthlib
+pyOpenSSL
+Flask-Login
 decorator
 Flask-SQLAlchemy
 Flask-WTF
